<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/australian_education_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <!--<include
        android:id="@+id/header_view"
        layout="@layout/header_activity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_labelmax" />-->

    <TextView
        android:id="@+id/age_titlesubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="@dimen/text_labelmed"
        android:text="@string/message_topic"
        android:textColor="@color/white"
        android:textSize="@dimen/text_labelmin"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/age_titlesubject"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/australian_education_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age_titlesubject"
        android:layout_marginTop="@dimen/text_labellow"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:singleLine="true"
        android:layout_toStartOf="@+id/australian_education_rate_title"
        android:layout_toLeftOf="@+id/australian_education_rate_title"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="@dimen/text_labelmax"
        android:text="@string/austrlian_education_page"
        android:textColor="@color/white"
        android:textSize="@dimen/text_labelmin" />

    <TextView
        android:id="@+id/australian_education_rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age_titlesubject"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/text_labellow"
        android:layout_marginRight="@dimen/text_labelmed"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="@dimen/text_labelmax"
        android:textColor="@color/white"
        android:textSize="@dimen/text_labelmin"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/age_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/australian_education_title"
        android:layout_margin="@dimen/text_labelsml"
        android:layout_weight="1"
        android:paddingLeft="@dimen/text_labelmin"
        android:paddingRight="@dimen/text_labelmin"
        android:text="@string/message_edu_qua"
        android:textColor="@color/hint"
        android:textSize="@dimen/text_labelmin" />

    <RadioGroup
        android:id="@+id/radioEducation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age_title_txt"
        android:layout_marginLeft="@dimen/text_labelsml"
        android:layout_marginRight="@dimen/text_labelsml"
        android:layout_marginBottom="@dimen/text_labelsml"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/australian_yes" />

        <RadioButton
            android:id="@+id/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/australian_no" />

    </RadioGroup>

    <RelativeLayout
        android:id="@+id/australia_edu_yes_layout_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/text_labelsml"
        android:layout_marginRight="@dimen/text_labelsml"
        android:layout_below="@+id/radioEducation"
        android:layout_above="@+id/bottom_view">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--ONE-->
                <TextView
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_labellow"
                    android:textSize="@dimen/text_labelsml"
                    android:textColor="@color/white"
                    android:background="@color/colorAccent"
                    android:text="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@+id/one"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="15dp"
                    android:background="@color/colorPrimaryDark"
                    android:padding="@dimen/text_labellow"
                    android:text="@string/one_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_labelsml" />

                <TextView
                    android:id="@+id/one_more_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/one"
                    android:background="@color/colorPrimary_light"
                    android:padding="@dimen/text_labellow"
                    android:text="@string/one_more_txt"
                    android:textColor="@color/mehroon"
                    android:textSize="@dimen/text_labelsml" />

                <RadioGroup
                    android:id="@+id/radiooneEducation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/one_more_txt"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/radioOneYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/australian_yes" />

                    <RadioButton
                        android:id="@+id/radioOneNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/australian_no" />

                </RadioGroup>

                <!--TWO-->
                <TextView
                    android:id="@+id/two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_labellow"
                    android:textSize="@dimen/text_labelsml"
                    android:layout_marginTop="@dimen/text_labelsml"
                    android:layout_below="@+id/radiooneEducation"
                    android:textColor="@color/white"
                    android:background="@color/colorAccent"
                    android:text="2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@+id/two"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="@dimen/text_labelsml"
                    android:layout_below="@+id/radiooneEducation"
                    android:background="@color/colorPrimaryDark"
                    android:padding="@dimen/text_labellow"
                    android:text="@string/two_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_labelsml" />

                <TextView
                    android:id="@+id/two_more_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/two"
                    android:background="@color/colorPrimary_light"
                    android:padding="@dimen/text_labellow"
                    android:text="@string/two_more_txt"
                    android:textColor="@color/mehroon"
                    android:textSize="@dimen/text_labelsml" />

                <RadioGroup
                    android:id="@+id/radiotwoEducation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/two_more_txt"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/radioTwoYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/australian_yes" />

                    <RadioButton
                        android:id="@+id/radioTwoNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/australian_no" />

                </RadioGroup>

                <TextView
                    android:id="@+id/three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_labellow"
                    android:textSize="@dimen/text_labelsml"
                    android:layout_marginTop="@dimen/text_labelsml"
                    android:layout_below="@+id/radiotwoEducation"
                    android:textColor="@color/white"
                    android:background="@color/colorAccent"
                    android:text="3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@+id/three"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="@dimen/text_labelsml"
                    android:layout_below="@+id/radiotwoEducation"
                    android:background="@color/colorPrimaryDark"
                    android:padding="@dimen/text_labellow"
                    android:text="@string/three_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_labelsml" />

                <TextView
                    android:id="@+id/three_more_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/three"
                    android:background="@color/colorPrimary_light"
                    android:padding="@dimen/text_labellow"
                    android:text="@string/three_more_txt"
                    android:textColor="@color/mehroon"
                    android:textSize="@dimen/text_labelsml" />

                <RadioGroup
                    android:id="@+id/radiothreeEducation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/three_more_txt"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/radioThreeYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/australian_yes" />

                    <RadioButton
                        android:id="@+id/radioThreeNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/australian_no" />

                </RadioGroup>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_labelmed"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/text_labelmed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/call_query"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/per_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/text_labelsml"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:gravity="center"
                android:text="Previous"
                android:textColor="@color/black"
                android:textSize="@dimen/text_labelmin" />

            <TextView
                android:id="@+id/nxt_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/text_labelsml"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:gravity="center"
                android:text="Next"
                android:textColor="@color/black"
                android:textSize="@dimen/text_labelmin" />

        </LinearLayout>

        <ImageView
            android:id="@+id/call_query"
            android:layout_width="@dimen/text_labelmax"
            android:layout_height="@dimen/text_labelmax"
            android:layout_alignParentRight="true"
            android:visibility="invisible"
            android:layout_marginRight="@dimen/text_labelmed"
            android:background="@drawable/call_round"
            android:padding="@dimen/text_labelsml"
            android:src="@drawable/phone_call"
            android:tint="@color/white" />

    </RelativeLayout>

</RelativeLayout>